syntax = "proto3";

import "user.proto";

package passport.access.v1;

option go_package = "github.com/ryanreadbooks/whimer/passport/sdk/access";

message CheckSignInReq {
  string sess_id = 1;
  string platform = 2;
}

message CheckSignInRes {
  bool signed = 1;
  optional passport.user.v1.UserInfo user = 2;
  string msg = 3;
}

service Access { rpc CheckSignIn(CheckSignInReq) returns (CheckSignInRes); }